tests/urmoac/errors/net_issues/edge_vmax_0/errors.urmoac
Error: Edge '10000' has a speed of 0.
Warning: Subsequent edges with vmax=0 will not be reported; use --write.net-errors to get the complete list.
The network could not be loaded
Quitting on error...
